# parallel-computing

./: README.md
ada/: ada-slides.md
ada/examples/1_hello_world/: alire.toml  workspace.code-workspace
ada/examples/2_1_task_type/: alire.toml  task_type.gpr  workspace.code-workspace
ada/examples/2_1_tasking/: workspace.code-workspace
ada/examples/2_2_task_type/: alire.toml  task_type.gpr  workspace.code-workspace
ada/examples/3_simple_sync/: alire.toml  simple_sync.gpr  workspace.code-workspace
ada/examples/4_data_race/: alire.toml  data_race.gpr  workspace.code-workspace
ada/examples/5_show_rendezvous/: alire.toml  show_rendezvous.gpr  workspace.code-workspace
ada/examples/6_data_race_rendezvous/: alire.toml  data_race_rendezvous.gpr  workspace.code-workspace
ada/examples/6_reader_writer/: alire.toml  reader_writer.gpr  workspace.code-workspace
ada/examples/6_temperature_converter/: alire.toml  temperature_converter.gpr  workspace.code-workspace
ada/examples/7_protected_object/: alire.toml  protected_object.gpr  workspace.code-workspace
ada/examples/8_dining_philosophers/: workspace.code-workspace
ada/examples/8_select_loop/: alire.toml  select_loop.gpr  workspace.code-workspace
ada/examples/atm_system/: alire.toml  atm_system.gpr  workspace.code-workspace
lab1/: README.md  main.cpp
lab2/: README.md  main.cpp  report.md
lab3/: CMakeLists.txt  README.md  bubble-sort-experiment.html  main.cpp
lab3_5/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  README.md  main.c  output  report.md  run-data.md  sequential.c
(+53 files in other folders)
